fix cut off logo

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ p {
 
 .logoname {
 	height: 60vh;
-	width: 60vh;
+	width: 62vh;
 	margin-top: 10vh;
 	margin-bottom: 10vh;
 }
